[package]
name = "structless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version ="3.1.6", features = ["derive"] }
anyhow="*"
tree-sitter="*"
tui="*"
crossterm="*"
tree-sitter-structless={ path = "../tree-sitter-structless" }
unicode-width="*"
tracing="*"
tracing-subscriber = { version = "0.3.9", features = [
  "env-filter",
  "json",
  "ansi",
] }